packaged/objects/Movie__c.object
<CustomObject>
    <description>Object to store all information about movies</description>
    <fields>
        <fullName>Backdrop__c</fullName>
        <formula>IMAGE(&quot;https://image.tmdb.org/t/p/w500&quot; + backdrop_path__c, &apos;Backdrop&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backdrop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <description>Genre of the movie</description>
        <inlineHelpText>Genre of the movie</inlineHelpText>
        <label>Genre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homepage__c</fullName>
        <description>Link to the homepage of the movie.</description>
        <inlineHelpText>Link to the homepage of the movie.</inlineHelpText>
        <label>Homepage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Now_Playing_End_Date__c</fullName>
        <description>This the end of the now playing time frame.</description>
        <inlineHelpText>This the end of the now playing time frame.</inlineHelpText>
        <label>Now Playing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Now_Playing_Start_Date__c</fullName>
        <description>This the beginning of the now playing time frame.</description>
        <inlineHelpText>This the beginning of the now playing time frame.</inlineHelpText>
        <label>Now Playing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Now_Playing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates the movies that are currently screened in theaters.</description>
        <inlineHelpText>This flag indicates the movies that are currently screened in theaters.</inlineHelpText>
        <label>Now Playing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Brief description about the movie.</description>
        <inlineHelpText>Brief description about the movie.</inlineHelpText>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Poster__c</fullName>
        <formula>IMAGE(&quot;https://image.tmdb.org/t/p/w500&quot; + poster_path__c, &quot;Poster&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Visual representation of how popular the movie is from a scale of 1 to 10. 1 being lowest and 10 being highest.</description>
        <inlineHelpText>Visual representation of how popular the movie is from a scale of 1 to 10. 1 being lowest and 10 being highest.</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field will indicate if the movie is released for general viewing.</description>
        <inlineHelpText>This field will indicate if the movie is released for general viewing.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Not Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>adult__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the movie belongs to adult category.</description>
        <inlineHelpText>Indicates if the movie belongs to adult category.</inlineHelpText>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>backdrop_path__c</fullName>
        <description>Backdrop image of the movie.</description>
        <inlineHelpText>Backdrop image of the movie.</inlineHelpText>
        <label>Backdrop Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>movie_id__c</fullName>
        <description>Unique movie id.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique movie id.</inlineHelpText>
        <label>Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>original_language__c</fullName>
        <description>Original language of the movie.</description>
        <inlineHelpText>Original language of the movie.</inlineHelpText>
        <label>Original Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_title__c</fullName>
        <description>Original title of the movie.</description>
        <inlineHelpText>Original title of the movie.</inlineHelpText>
        <label>Original Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>popular_movies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicator of the data category.</description>
        <inlineHelpText>Boolean indicator of the data category.</inlineHelpText>
        <label>Popular Movies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>popularity__c</fullName>
        <description>Popularity of the movie.</description>
        <inlineHelpText>Popularity of the movie.</inlineHelpText>
        <label>Popularity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>poster_path__c</fullName>
        <description>Relative path of the poster.</description>
        <inlineHelpText>Relative path of the poster.</inlineHelpText>
        <label>Poster Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_date__c</fullName>
        <description>Release date of the movie.</description>
        <inlineHelpText>Release date of the movie.</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <description>Title of the movie.</description>
        <inlineHelpText>Title of the movie.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>video__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if this movie is a video.</description>
        <inlineHelpText>Indicate if this movie is a video.</inlineHelpText>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vote_average__c</fullName>
        <description>Average vote.</description>
        <inlineHelpText>Average vote.</inlineHelpText>
        <label>Vote Average</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vote_count__c</fullName>
        <description>Total number of votes.</description>
        <inlineHelpText>Total number of votes.</inlineHelpText>
        <label>Vote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Movie</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vote_count__c</columns>
        <columns>popularity__c</columns>
        <columns>vote_average__c</columns>
        <columns>release_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Now_Playing</fullName>
        <columns>NAME</columns>
        <columns>vote_count__c</columns>
        <columns>popularity__c</columns>
        <columns>vote_average__c</columns>
        <columns>release_date__c</columns>
        <columns>Now_Playing_Start_Date__c</columns>
        <columns>Now_Playing_End_Date__c</columns>
        <columns>Now_Playing__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Now_Playing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Now Playing</label>
    </listViews>
    <listViews>
        <fullName>Popular_Movies</fullName>
        <columns>NAME</columns>
        <columns>vote_count__c</columns>
        <columns>popularity__c</columns>
        <columns>vote_average__c</columns>
        <columns>release_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>popular_movies__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Popular Movies</label>
    </listViews>
    <nameField>
        <label>Movie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>